2024-04-13  David Blacka  <david@blacka.com>

	* Remove support for ECC_GOST
	* Create a new DSAlgorithm class, move DS creation into that
	* Add support for DS algorithms 3 and 4 -- bouncycastle crypto
	provider used for DS algoirthm 3 (GOST R 34.11-94)
	* Moved support for loading the bouncycastle provider to the new
	DSAlgorithm class

2024-04-07  David Blacka  <david@blacka.com>

        * Released version 0.20
        * Removed support for Gradle builds since the gradle config was
        out-of-date
        * Requires Java 15 or later for EdDSA support
        * Supports DNSSEC algorithm 16 using the SunEC provider
        * Supports a java properties-formatted config file.  See
        jdnssec-tools.properties.example for an example
        * Updated to dnsjava 3.5.3
        * Updated to commons-cli 1.6.0
        * Added a "one-jar" distribution method, and a "univeral" CLI to
        use with it.
        * Formatting and linter suggestions

2024-03-25  David Blacka <davidb@verisign.com>

        * Released version 0.19
        * Handle duplicate key tags
        * jdnssec-keygen can now attempt to generate keys with specified key tags

2023-07-24  David Blacka  <davidb@verisign.com>

        * Released version 0.17.1
        * Add a `-t` option to jdnssec-verifyzone: verify using specified time.

2022-09-21  David Blacka  <davidb@verisign.com>

        * Released version 0.17
        * Updated to dnsjava 3.5.1
        * Formatting and linter suggestions
        * Use slf4j instead of log4j.
        * jdnssec-dstool can now generate CDS records

2019-07-23  David Blacka  <davidb@verisign.com>

        * Released version 0.16
        * Updated to dnsjava 2.1.9

2019-02-26  David Blacka  <davidb@verisign.com>

        * Released version 0.15
        * Ensure when a command line tool throws an exception it exits
        with a non-zero exit code.
        * Update local dnsjava jar to match actual build for
        jdnssec-dnsjava.
